# src/spiffworkflow_backend/api.yml
@@ -1048,6 +1048,19 @@ paths:
                 $ref: "#/components/schemas/ProcessInstanceLog"
 
   /secrets:
+    parameters:
+      - name: page
+        in: query
+        required: false
+        description: The page number to return. Defaults to page 1.
+        schema:
+          type: integer
+      - name: per_page
+        in: query
+        required: false
+        description: The number of items to show per page. Defaults to page 10.
+        schema:
+          type: integer
     post:
       operationId: spiffworkflow_backend.routes.process_api_blueprint.add_secret
       summary: Create a secret for a key and value
@@ -1065,6 +1078,18 @@ paths:
             application/json:
               schema:
                 type: number
+    get:
+      operationId: spiffworkflow_backend.routes.process_api_blueprint.secret_list
+      summary: Return list of all secrets
+      tags:
+        - Secrets
+      responses:
+        "200":
+          description: list of secrets
+          content:
+            application/json:
+              schema:
+                  $ref: "#/components/schemas/Secret"
 
   /secrets/{key}:
     parameters:
@@ -1075,7 +1100,7 @@ paths:
         schema:
           type: string
     get:
-      operationId: spiffworkflow_backend.routes.process_api_blueprint.get_secret
+      operationId: spiffworkflow_backend.routes.process_api_blueprint.get_secret_value
       summary: Return a secret value for a key
       tags:
         - Secrets
